# gitnapse

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  ci-check.sh  references.md
.github/scripts/: package-linux-arch.sh  package-linux-fedora.sh  package-linux-ubuntu.sh  package-linux.sh  package-macos.sh  package-windows.ps1  setup-linux-arch.sh  setup-linux-fedora.sh  setup-linux-ubuntu.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  COLLABORATIVE_SECTION.md  GITNAPSE_CLI.md  IMPLEMENTATION_LOG.md  INSTALLATION.md  OAUTH_AUTHENTICATION.md  OVERVIEW.md  PROVIDER_CONFIGURATION.md  RELEASE_WORKFLOW.md  REMOTE_INSTALLATION.md  THEME_CONFIG.md  USAGE.md
docs/tests/: README.md  SECURITY_AUDIT.md  TEST_COVERAGE.md
scripts/: install.ps1  install.sh
src/: auth.rs  cache.rs  cli_commands.rs  config.rs  error.rs  github.rs  lib.rs  main.rs  models.rs  oauth.rs  oauth_session.rs  provider.rs  runtime.rs  secure_store.rs  syntax.rs  task_manager.rs
src/app/: actions.rs  commands.rs  mod.rs  network.rs  render.rs  theme.rs
src/app/input/: fields.rs  mod.rs  mouse.rs  nav.rs
src/cli/: api.rs  args.rs  git.rs  helpers.rs  mod.rs
src/config/: account.rs  keybindings.rs  mod.rs  theme.rs
src/github/: ci.rs  compare.rs  content.rs  mod.rs  provider_impl.rs  prs.rs  releases.rs  repos.rs
src/models/: misc.rs  mod.rs  pr.rs  release.rs  repo.rs
tests/: auth_precedence_tests.rs  github_search_tests.rs  secure_store_tests.rs
themes/: Berlin.jsonc  Bogota.jsonc  Helsinki.jsonc  Lahabana.jsonc  London.jsonc  Madrid.jsonc  Miami.jsonc  Oslo.jsonc  Paris.jsonc  Praha.jsonc  Tokio.jsonc  X.jsonc
