[package]
name = "gitnapse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
dotenvy = "0.15"
http = "1.3"
keyring = "3.6"
octocrab = { version = "0.49.8", default-features = true }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rpassword = "7.4"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.48", features = ["rt", "time"] }
url = "2.5"
webbrowser = "1.0"

[dev-dependencies]
mockito = "1.7"
serial_test = "3.2"
tempfile = "3.20"
